# uposatha-ical

./: .gitignore  MahanikayaCalendar.py  README.md  from_file.py  from_web.py  pyproject.toml  setup.py
analysis/: .Rhistory  analysis.Rmd  analysis.nb.html  assumptions.Rmd  assumptions.nb.html  events.csv
examples/: adjustments.py  gnome-notification.py  quick_icalendar_import.py  seasons-cli.py  special_days.py  test_adjustments.py  uposatha-cli.py
experiments/: from_file.py  from_web.py  ical_components.py  multiple_summaries.py  to_csv.py  working_with_lists.py
explore/: adjustments.py  calendar_extensions.py  conftest.py  first_last_day.py  half_moons.py  holidays.py  test_adjustments.py  test_half_moons.py  test_holidays.py
forest_sangha_moons/: MahanikayaCalendar.py  __init__.py
src/forest_sangha_moons/: MahanikayaCalendar.py
tests/: conftest.py  generate.py  test_MahanikayaCalendar.py  test_calendar.py  test_context.py  test_event.py  test_extended_summary.py  test_fixtures.py  test_generate.py  test_query.py  test_search.py  test_season.py  test_season_maker.py
